fix warnings in TableDialogEditDemo